--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ form{
 	box-shadow: 0 1px 1px #ccc;
 	width: 400px;
 	padding: 35px 60px;
-	margin: 80px auto;
+	/*margin: 80px auto;*/
 }
 
 form h1{
