--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 
 
 *{
-	margin:100px;
+	margin:0;
 	padding:0;
 }
 
@@ -18,6 +18,8 @@ body{
 	font:15px/1.3 'Open Sans', sans-serif;
 	color: #5e5b64;
 	text-align:center;
+    margin-top: 100px;
+    margin-left: 100px;
 }
 
 a, a:visited {
